plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.10'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.sprint.mission'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

test {
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.8" // 버전 명시
}


jacocoTestReport {
    dependsOn test // 리포트 생성 전에 test를 반드시 수행해야 한다!
    reports { // 어떤 파일들을 생성할지, 어디에 생성할지 설정
        xml.required.set(true) // Gradle 8+: enabled → required
        html.required.set(true)
        // 경로 명시 안 할 경우 기본 경로는 build/reports/jacoco 이하 경로
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVERED_RATIO'
                minimum = 0.75
            }
        }
    }
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
